--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<title>shepherdboy</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
+		<link rel="icon" href="img/favicon.png" />
 		<link rel="stylesheet" href="css/reset.css">
 		<link rel="stylesheet" href="css/shep.css">
 		<style>
@@ -26,9 +27,8 @@
 			
 			<div class="wrap">
 				<div class="sub"><a href="mess.html">Mess</a></div>
-				<div class="sub"><a href="childhood.html">Childhood</a></div>
-				<div class="sub"><a href="teenage.html">Teenage</a></div>
-				<div class="sub"><a href="myuniversity.html">My university</a></div>
+				<div class="sub"><a href="childhood.html">Science Fiction</a></div>
+				<div class="sub"><a href="teenage.html">Novels</a></div>
 				<div class="sub"><a href="onhisown.html">On his own</a></div>
 			</div>
 		</div>
