--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 		<div class="content">
 			<div class="top">
-				<h1 class="title">牧羊少年物语</h1>
+				<h1 class="title">I come, I see</h1>
 				<!-- <p class="message">For the people I met</p> -->
 			</div>
 			
