--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title>shepherdboy</title>
+		<title>S-H-B | Demos and myself</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
+		<meta name="description" content="展示一些样例,写一些书籍,干点啥好呢,gy的网站">
+		<meta name="keywords" content="three.js,demos,canvas,webgl,tricks,前端,guoyang,gy134340,web">
+		<link rel="icon" href="img/icon/favicon.png">
 		<link rel="icon" href="img/favicon.png" />
 		<link rel="stylesheet" href="css/reset.css">
 		<link rel="stylesheet" href="css/shep.css">
@@ -26,10 +29,22 @@
 			</div>
 			
 			<div class="wrap">
-				<div class="sub"><a href="mess.html">Mess</a></div>
-				<div class="sub"><a href="childhood.html">Science Fiction</a></div>
-				<div class="sub"><a href="teenage.html">Novels</a></div>
-				<div class="sub"><a href="onhisown.html">On his own</a></div>
+				<div class="sub"><a href="three.html" title="three.js的demo">Three.js </a></div>
+				<div class="sub"><a href="mess.html" title="一些乱七八糟的展示">Mess</a></div>
+				<div class="sub"><a href="book.html" title="一些书籍">Book</a></div>
+				<div class="sub"><a href="onhisown.html" title="在人间">On his own</a></div>
+			</div>
+
+			<div class="footer">
+				<div class="copyright">
+					<p>&copy 2017-forever gy</p>
+				</div>
+				<div class="footer_link">
+					<div class="link_wrap">
+						<div class="sub_link"><a href="https://github.com/gy134340">Github</a></div>
+						<div class="sub_link"><a href="http://gy134340.com/">My blog</a></div>
+					</div>
+				</div>
 			</div>
 		</div>
 		<script src="js/three.min.js"></script>
