--- a/cimg.html
+++ b/cimg.html
@@ -10,7 +10,7 @@
 	<link rel="stylesheet" href="css/reset.css">
 	<style>
 		body{
-			background-color: #000;
+			/*background-color: #000;*/
 		}
 		.container{
 			width: 100%;
@@ -47,7 +47,7 @@
 			-webkit-transform:translate(-50%,-50%);
 			transform:translate(-50%,-50%);
 			perspective: 500;
-			background-color: #000;
+			/*background-color: #000;*/
 		}
 		.atom{
 			position: absolute;
