--- a/three.html
+++ b/three.html
@@ -28,7 +28,7 @@
 	</ul>
 </div>
 <div class="content">
-	<iframe src="cimg.html"  id="myframe" name="myframe" frameborder="0"></iframe>
+	<iframe src="tbox.html"  id="myframe" name="myframe" frameborder="0"></iframe>
 </div>
 	
 </body>
