--- a/index.html
+++ b/index.html
@@ -8,12 +8,98 @@
 		<meta name="keywords" content="three.js,demos,canvas,webgl,tricks,前端,guoyang,gy134340,web">
 		<link rel="icon" href="img/icon/favicon.png">
 		<link rel="stylesheet" href="css/reset.css">
-		<link rel="stylesheet" href="css/shep.css">
+		<!-- <link rel="stylesheet" href="css/shep.css"> -->
 		<style>
 			body {
 				background-color: rgb(200,200,200);
 				margin: 0px;
+				color:#000;
 				overflow: hidden;
+			}
+			.container{
+				position: relative;
+			}
+			.content{
+				position: absolute;
+				width:100%;
+				height: 100%;
+				top: 0;
+				left: 0;
+			}
+			.top{
+				width: auto;
+				position: absolute;
+				left:50%;
+				-webkit-transform:translateX(-50%);
+				transform:translateX(-50%);
+				bottom: 68%;
+			}
+			.title{
+				font-size: 34px;
+				text-align: right;
+				white-space: nowrap;
+				letter-spacing:10px;
+			}
+			.wrap{
+				width: 80%;
+				position: absolute;
+				left:10%;
+				bottom: 58%;
+				display: -webkit-box;
+				display: box;
+			}
+			.wrap .sub{
+				-webkit-box-flex:1;
+				box-flex:1;
+				text-align: center;	
+			}
+			.wrap .sub a{
+				font-size: 18px;
+			}
+			.footer{
+				width: auto;
+				left:50%;
+				-webkit-transform:translateX(-50%);
+				transform: translateX(-50%);
+				height:30px;
+				bottom: 0;
+				color:#e78170;
+				font-size: 12px;
+				position: absolute;
+				display: -webkit-box;
+				display: box;
+			}
+			.footer .copyright{
+				width: auto;
+				-webkit-box-flex:1;
+				box-flex:1;
+			}
+			.footer .copyright p{
+				display:inline-block;
+				padding: 0 20px 0 10px;
+				color:#555;
+				line-height: 30px;
+			}
+			.footer .footer_link{
+				-webkit-box-flex:1;
+				box-flex:1;
+			}
+			.footer .footer_link .link_wrap{
+				display: -webkit-box;
+				display: box;
+			}
+			.footer .footer_link .sub_link{
+				-webkit-box-flex:1;
+				box-flex:1;
+			}
+			.footer .sub_link a{
+				color:#555;
+				display: inline-block;
+				line-height: 27px;
+				padding: 3px 10px 0 3px;
+			}
+			.footer .sub_link a:hover{
+				color: #000;
 			}
 		</style>
 	</head>
@@ -85,6 +171,7 @@
 
 
 				//  这里可以换一张全景图
+				//  在是正方体在内部6个面看的
 				var materials = [
 
 					loadTexture( 'img/skybox/px.jpg' ), // right
@@ -252,8 +339,8 @@
 			}
 
 		</script>
-		<script src="js/jquery-1.11.1.min.js"></script>
-		<script src="js/shep.js"></script>
+		<!-- <script src="js/jquery-1.11.1.min.js"></script>
+		<script src="js/shep.js"></script> -->
 	</body>
 </html>
 
