--- a/three.html
+++ b/three.html
@@ -15,8 +15,8 @@
 <div class="sidebar">
 	<h3 class="title">webgl demos</h3>
 	<ul>
-		<li><a href="cimg.html" target="myframe">canvas图片切分</a></li>
-		<li><a href="emo1.html" target="myframe">demo2</a></li>
+		<li><a href="tbox.html" target="myframe">Box with data</a></li>
+		<li><a href="cimg.html" target="myframe">Canvas图片切分</a></li>
 		<li><a href="emo1.html" target="myframe">demo3</a></li>
 		<li><a href="emo1.html" target="myframe">demo4</a></li>
 		<li><a href="emo1.html" target="myframe">demo5</a></li>
