--- a/cimg.html
+++ b/cimg.html
@@ -230,7 +230,7 @@
 	// }
 
 	// dom加载完开始
-	window.addEventListener('load', function() {
+	// window.addEventListener('load', function() {
 		animate();			// tween
 
 
@@ -290,7 +290,7 @@
 			}
 		},false);
 
-	});
+	// });
 
 </script>	
 </body>
