--- a/cimg.html
+++ b/cimg.html
@@ -97,13 +97,14 @@
 <script src="js/three.min.js"></script>
 <!-- <script src="js/renderers/Projector.js"></script>
 <script src="js/renderers/CanvasRenderer.js"></script> -->
-<!-- <script src='js/jquery-1.11.1.min.js'></script> -->
+<script src='js/jquery-1.11.1.min.js'></script>
 
 <script src='js/Tween.js'></script>
 <script src="js/RequestAnimationFrame.js"></script>
 
 <script type="text/javascript">
 
+$(function(){
 	/**
 	 * canavs and img 
 	 * @author  gy
@@ -291,7 +292,7 @@
 		},false);
 
 	// });
-
+});
 </script>	
 </body>
 </html>
