--- a/three.html
+++ b/three.html
@@ -16,9 +16,9 @@
 	<h3 class="title">webgl demos</h3>
 	<ul>
 		<li><a href="tbox.html" target="myframe">Box with data</a></li>
-		<li><a href="cimg.html" target="myframe">Canvas图片切分</a></li>
 		<li><a href="tplayer.html" target="myframe">空间播放器</a></li>
-		<li><a href="emo1.html" target="myframe">demo4</a></li>
+		<li><a href="cimg.html" target="myframe">Canvas图片切分</a></li>
+		<li><a href="ai.html" target="myframe">Alphago李世石大战第一局</a></li>
 		<li><a href="emo1.html" target="myframe">demo5</a></li>
 		<li><a href="emo1.html" target="myframe">demo6</a></li>
 		<li><a href="emo1.html" target="myframe">demo7</a></li>
