--- a/three.html
+++ b/three.html
@@ -17,10 +17,10 @@
 	<ul>
 		<li><a href="tbox.html" target="myframe">Box with data</a></li>
 		<li><a href="tplayer.html" target="myframe">空间播放器</a></li>
-		<li><a href="cimg.html" target="_blank">Canvas图片切分</a></li>
+		<li><a href="cimg.html" target="_blank">Canvas图片切分2D</a></li>
 		<li><a href="ai.html" target="myframe">Alphago李世石大战第一局</a></li>
 		<li><a href="portrait.html" target="myframe">portrait => cp</a></li>
-		<li><a href="emo1.html" target="myframe">demo6</a></li>
+		<li><a href="threebody.html" target="myframe">伪三体星</a></li>
 		<li><a href="emo1.html" target="myframe">demo7</a></li>
 		<li><a href="emo1.html" target="myframe">demo8</a></li>
 		<li><a href="emo1.html" target="myframe">demo9</a></li>
