--- a/text.html
+++ b/text.html
@@ -40,7 +40,7 @@
 </head>
 <body>
 <div class="container">
-	<p class="title"> img to number</p>
+	<p class="title">text's geometry</p>
 </div>
 </body>
 <script src="js/three.min.js"></script>
@@ -52,7 +52,9 @@
 <script src="js/RequestAnimationFrame.js"></script>
 <script type="text/javascript">
 
-
+// about text shader geometry
+// @author gy 2017.2.11
+ 
 var container,stats;	
 var canavs;
 var camera,scene,renderer,controls;
@@ -72,16 +74,54 @@ function init () {
 
 	// 相机
 	camera = new THREE.PerspectiveCamera(60, winWidth / winHeight, 1, 10000);
-	camera.position.set(0, 0, 1000);
+	camera.position.set(0, 0, 500);
 	camera.lookAt(0, 0, 0);
 
 	// 光
 	var light = new THREE.AmbientLight(0x404040); 
 	scene.add(light);
+
+
+	var axisHelper = new THREE.AxisHelper(1000);
+	scene.add( axisHelper );
+	// geometry
+	var text = "text's geometry.";
+	var textFont  = new Promise(function(resolve,reject){
+		new THREE.FontLoader().load('fonts/optimer_bold.typeface.json',function(res){
+			font = res;
+			resolve();
+		});
+	});
 	
+	textFont.then(function(){
+
+		var geometry = new THREE.TextGeometry(text,{
+					font: font,
+					size: 100,
+					height: 20,
+					curveSegments: 4,
+					bevelThickness: 2,
+					bevelSize: 1.5,
+					bevelEnabled: true,
+					material: 0,
+					extrudeMaterial: 1
+				});
+		var wireframe = new THREE.WireframeGeometry( geometry );
+		var line = new THREE.LineSegments( wireframe );
+		line.material.depthTest = false;
+		line.material.opacity = 0.25;
+		line.material.transparent = true;
+		line.position.set(-600,0,0);
+		scene.add( line );
+
+	}).catch(function(error){
+		console.log('font load error');
+	});		
+	
+
 	// renderer 
 	renderer = new THREE.WebGLRenderer( {antialias: true} );
-	renderer.setClearColor(0x333333);
+	renderer.setClearColor(0x000000);
 	renderer.setPixelRatio(window.devivePixelRatio);
 	renderer.setSize(window.innerWidth, window.innerHeight);
 	container.append(renderer.domElement);
