--- a/three.html
+++ b/three.html
@@ -21,7 +21,8 @@
 		<li><a href="ai.html" target="myframe">Alphago李世石大战第一局</a></li>
 		<li><a href="portrait.html" target="myframe">portrait => cp</a></li>
 		<li><a href="threebody.html" target="myframe">伪三体星</a></li>
-		<li><a href="emo1.html" target="myframe">demo7</a></li>
+		<li><a href="text.html" target="myframe">文本的geometry</a></li>
+		<li><a href="particle.html" target="myframe">粒子与geometry</a></li>
 		<li><a href="emo1.html" target="myframe">demo8</a></li>
 		<li><a href="emo1.html" target="myframe">demo9</a></li>
 		<li><a href="emo1.html" target="myframe">demo10</a></li>
