--- a/index.html
+++ b/index.html
@@ -109,14 +109,14 @@
 
 		<div class="content">
 			<div class="top">
-				<h1 class="title">I come, I see</h1>
+				<h1 class="title">alpha++++</h1>
 				<!-- <p class="message">For the people I met</p> -->
 			</div>
 			
 			<div class="wrap">
-				<div class="sub"><a href="three.html" title="three.js的demo">Three.js </a></div>
-				<div class="sub"><a href="mess.html" title="一些乱七八糟的展示">Mess</a></div>
-				<div class="sub"><a href="book.html" title="一些书籍">Book</a></div>
+				<div class="sub"><a href="three.html" title="three.js的demo">Three.js的demos</a></div>
+				<!-- <div class="sub"><a href="mess.html" title="一些乱七八糟的展示">Mess</a></div> -->
+				<div class="sub"><a href="book.html" title="一些书籍">我的书</a></div>
 				<div class="sub"><a href="onhisown.html" title="在人间">On his own</a></div>
 			</div>
 
