--- a/particle.html
+++ b/particle.html
@@ -56,7 +56,8 @@
 // @author gy 2017.2.11
  
 var container,stats;	
-var canavs;
+var canvas;
+var meshs = []; 
 var camera,scene,renderer,controls;
 var raycaster;			// 点击发出的一条射线
 var mouse = new THREE.Vector2();	// 点向量
@@ -74,50 +75,92 @@ function init () {
 
 	// 相机
 	camera = new THREE.PerspectiveCamera(60, winWidth / winHeight, 1, 10000);
-	camera.position.set(0, 0, 300);
+	camera.position.set(600, 200, 600);
 	camera.lookAt(0, 0, 0);
 
 	// 光
 	var light = new THREE.AmbientLight(0x404040); 
 	scene.add(light);
 
+	var pointLight = new THREE.PointLight( 0xff00ff, 1, 1000 );
+	pointLight.position.set( 0, 800, 0 );
+	scene.add( pointLight );
+
 
 	var axisHelper = new THREE.AxisHelper(1000);
 	scene.add( axisHelper );
 
 	// geometry
-	var text = "test";
-	var textFont  = new Promise(function(resolve,reject){
-		new THREE.FontLoader().load('fonts/optimer_bold.typeface.json',function(res){
-			font = res;
-			resolve();
-		});
-	});
-	
-	textFont.then(function(){
+	// var text = 't';
+	// var textFont  = new Promise(function(resolve,reject){
+	// 	new THREE.FontLoader().load('fonts/optimer_bold.typeface.json',function(res){
+	// 		font = res;
+	// 		resolve();
+	// 	});
+	// });	
+	// textFont.then(function(){
+	// 	var geometry = new THREE.TextGeometry(text,{
+	// 				font: font,
+	// 				size: 70,
+	// 				height: 20,
+	// 				curveSegments: 4,
+	// 				bevelThickness: 2,
+	// 				bevelSize: 1.5,
+	// 				bevelEnabled: true,
+	// 				material: 0,
+	// 				extrudeMaterial: 1
+	// 			});
+	// 	var wireframe = new THREE.WireframeGeometry( geometry );
+	// 	var line = new THREE.LineSegments( wireframe );
+	// 	line.material.depthTest = false;
+	// 	line.material.opacity = 0.25;
+	// 	line.material.transparent = true;
+	// 	scene.add( line );
+	// }).catch(function(error){
+	// 	console.log('font error');
+	// });
 
-		var geometry = new THREE.TextGeometry(text,{
-					font: font,
-					size: 70,
-					height: 20,
-					curveSegments: 4,
-					bevelThickness: 2,
-					bevelSize: 1.5,
-					bevelEnabled: true,
-					material: 0,
-					extrudeMaterial: 1
-				});
-		var wireframe = new THREE.WireframeGeometry( geometry );
-		var line = new THREE.LineSegments( wireframe );
-		line.material.depthTest = false;
-		line.material.opacity = 0.25;
-		line.material.transparent = true;
-		scene.add( line );
+	var gridHelper = new THREE.GridHelper( 400, 100 );
+	scene.add( gridHelper );	
+	// var sprite = new THREE.TextureLoader().load( "textures/sprites/ball.png" );
+	var geometry = new THREE.SphereGeometry( 50, 60, 60 );
+		// points
+	var material = new THREE.PointsMaterial({color: 0x00ffff,transparent: true});
 
-	}).catch(function(error){
-		console.log('font load error');
-	});		
+	var points = new THREE.Points( geometry, material );
+	points.position.set(0,40,0)
+	// console.log('points',points.geometry.vertices);
+	scene.add( points );
+
+	var len = points.geometry.vertices.length;
+	var geometry = new THREE.BoxBufferGeometry( 2, 2, 2 );
+	var material = new THREE.MeshBasicMaterial( { color: 0xff0000 } );
+	var mesh = new THREE.Mesh( geometry, material );
+	scene.add( mesh );
 	
+	for(var i = 0; i < len; i+=2){
+
+		var poi = points.geometry.vertices[i];
+		var mesh = new THREE.Mesh( geometry, material );
+		scene.add( mesh);
+		mesh.position.set(Math.round(poi.x),Math.round(poi.y)+40,Math.round(poi.z));
+		mesh.userData.originY = mesh.position.y;
+		mesh.userData.originX = mesh.position.x;
+		mesh.userData.originZ = mesh.position.z;
+		meshs.push(mesh);
+		// console.log(mesh, poi);
+	}
+
+	startFlow();
+	setInterval(function(){
+		startFlow();
+	},6000);
+	
+	// var down = flowDown();
+	// var Up = flowUp();
+	// flowDown();
+	// down.then(Up);
+	// Up.then(down);
 
 	// renderer 
 	renderer = new THREE.WebGLRenderer( {antialias: true} );
@@ -145,7 +188,56 @@ function init () {
 	window.addEventListener( 'resize', onWindowResize, false );
 }
 
+function startFlow(){
+
+	flowDown().then(function(){
+		return flowUp();
+	}).catch(function(error){
+		console.log('down up error');
+	});
+}
+
+
+function flowDown(){
+
+	for(var i = 0, len = meshs.length; i < len; i++){
+		var cube = meshs[i];
+
+		new TWEEN.Tween(cube.position).to({y:0},Math.sqrt(cube.position.y) * 100).start();
+	}	
+
+	return new Promise(function(resolve,reject){
+		setTimeout(function(){
+			resolve();
+		},3000);
+	})
+}
+
+function flowUp(){
+
+	var rand = 400 * Math.random();
+	for(var i = 0, len = meshs.length; i < len; i++){
+		var cube = meshs[i];
+		var originY = cube.userData.originY;
+		var originX = cube.userData.originX;
+		var originZ = cube.userData.originZ;
+		new TWEEN.Tween(cube.position).to({x:originX+rand,y:originY,z:originZ+rand},Math.sqrt(originY) * 150).start();
+	}
+
+	return new Promise(function(resolve,reject){
+		setTimeout(function(){
+			resolve();
+		},3000);
+	})
+}
+
+var theta = 0;
+var radius = 600;
 function render(){
+
+	theta += 0.3;  // 自动渲染
+	camera.position.x = radius * Math.sin( THREE.Math.degToRad( theta ) );
+	camera.position.z = radius * Math.cos( THREE.Math.degToRad( theta ) );
 	camera.lookAt(scene.position);
 	camera.updateProjectionMatrix();
 
