--- a/portrait.html
+++ b/portrait.html
@@ -224,9 +224,10 @@ function animate () {
 	controls.update();
 }
 
-init();
-animate();
-
+document.addEventListener('DOMContentLoaded', function(){
+	init();
+	animate();
+}, false);
 
 function onWindowResize(){
 
