--- a/portrait.html
+++ b/portrait.html
@@ -48,7 +48,7 @@
 </head>
 <body>
 <div class="container">
-	<p class="title"> img to number</p>
+	<p class="title"> Trump</p>
 	<img id ="num_img" src="img/cp.jpg" alt="">
 </div>
 </body>
