--- a/index.html
+++ b/index.html
@@ -102,6 +102,16 @@
 				color: #000;
 			}
 		</style>
+		<script>
+		var _hmt = _hmt || [];
+		(function() {
+		  var hm = document.createElement("script");
+		  hm.src = "https://hm.baidu.com/hm.js?4a8468267af9dd735e7b3637387ff04e";
+		  var s = document.getElementsByTagName("script")[0]; 
+		  s.parentNode.insertBefore(hm, s);
+		})();
+		</script>
+
 	</head>
 	<body>
 
