--- a/three.html
+++ b/three.html
@@ -9,7 +9,17 @@
 	<link rel="icon" href="img/icon/favicon.png">
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/three.css">
-	<link rel="stylesheet" href="css/bootstrap.min.css" >	
+	<link rel="stylesheet" href="css/bootstrap.min.css" >
+	<script>
+	var _hmt = _hmt || [];
+	(function() {
+	  var hm = document.createElement("script");
+	  hm.src = "https://hm.baidu.com/hm.js?4a8468267af9dd735e7b3637387ff04e";
+	  var s = document.getElementsByTagName("script")[0]; 
+	  s.parentNode.insertBefore(hm, s);
+	})();
+	</script>
+	
 </head>
 <body>
 <div class="sidebar">
