--- a/three.html
+++ b/three.html
@@ -33,7 +33,7 @@
 		<li><a href="threebody.html" target="myframe">伪三体星</a></li>
 		<li><a href="text.html" target="myframe">文本的geometry</a></li>
 		<li><a href="particle.html" target="myframe">粒子与geometry</a></li>
-		<li><a href="emo1.html" target="myframe">demo8</a></li>
+		<li><a href="http://www.134340.space/" target="myframe">3d空间画板</a></li>
 		<li><a href="emo1.html" target="myframe">demo9</a></li>
 		<li><a href="emo1.html" target="myframe">demo10</a></li>
 	</ul>
